--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "categories": [
         "Other"
     ],
-    "activationEvents": [],
+    "activationEvents": [
+        "onLanguage:markdown"
+    ],
     "main": "./extension.js",
     "scripts": {
         "lint": "eslint .",
