--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
         "pretest": "yarn run lint",
         "test": "vscode-test"
     },
+    "contributes": {
+        "commands": [
+            {
+                "command": "extension.capitalizeMarkdownList",
+                "title": "Capitalize Markdown List Items"
+            }
+        ]
+    },
     "devDependencies": {
         "@types/vscode": "^1.85.0",
         "@types/mocha": "^10.0.6",
