--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
         ]
     },
     "devDependencies": {
-        "@types/vscode": "^1.85.0",
         "@types/mocha": "^10.0.6",
         "@types/node": "18.x",
-        "eslint": "^8.56.0",
-        "typescript": "^5.3.3",
+        "@types/vscode": "^1.85.0",
         "@vscode/test-cli": "^0.0.4",
-        "@vscode/test-electron": "^2.3.8"
+        "@vscode/test-electron": "^2.3.8",
+        "typescript": "^5.3.3"
     }
 }
-
