--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "mdbulletcaps",
     "displayName": "MDBulletCaps",
     "description": "An extension that converts ASCIIMath to Latex on the go inside of Markdown files.",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/timrolsh/MDBulletCaps"
+    },
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.85.0"
@@ -35,3 +39,4 @@
         "typescript": "^5.3.3"
     }
 }
+
