--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "mdbulletcaps",
     "displayName": "MDBulletCaps",
     "description": "An extension that converts ASCIIMath to Latex on the go inside of Markdown files.",
+    "publisher": "timrolsh",
     "repository": {
         "type": "git",
         "url": "https://github.com/timrolsh/MDBulletCaps"
